tests/paczka2/big_fuzzy/45133936.err
Error in line 1: Mjixm A899 76,6
Error in line 13: A899 A429 36,5
Error in line 16: rtL5o A26 13,6
Error in line 19: rtL5o S499 86,2
Error in line 29: Mjixm A26 12,5
Error in line 47: vkNay A899 51,7
Error in line 59: vkNay S499 22,8
Error in line 53: V39 A26 4,9
Error in line 62: rtL5o A429 4,4
Error in line 77: A899 A429 34,2
Error in line 95: V39 A429 96,5
Error in line 97: V39 S499 79,0
Error in line 104: vkNay A899 59,2
Error in line 120: ntHqG A899 11,2
Error in line 131: ntHqG S499 69,0
Error in line 134: vkNay S499 63,8
Error in line 141: V39 A899 443,5
Error in line 147: A899 S499 69,50
Error in line 138: A899 S499 51,1
Error in line 155: vkNay A899 164,7
Error in line 148: V39 A26 45,3
Error in line 163: vkNay A26 80,0
Error in line 171: rtL5o A26 104,3
Error in line 193: A899 S499 26,39
Error in line 181: ntHqG A429 32,8
Error in line 197: ntHqG S499 78,4
Error in line 205: ohAiSDhzeW A26 83,7
Error in line 207: vkNay A429 28,1
Error in line 214: vkNay A26 56,5
Error in line 218: vkNay A899 73,2
Error in line 201: A899 S499 16,7
Error in line 222: ohAiSDhzeW A26 42,0
Error in line 238: A899 A899 7,88
Error in line 236: A899 A899 18,9
Error in line 240: ohAiSDhzeW S499 8,8
